# vd_stock_game

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.tmp.24712.1776749595177  PRICE_MODELS.md  database.cpp  database.h  exceptions.h  exchangeservice.h  mainwindow.cpp  mainwindow.cpp.tmp.4336.1776757013204  mainwindow.h  mainwindow.ui  models.h  portfoliomodel.cpp  portfoliomodel.h  resources.qrc  scheduleservice.h  stockdata.h  stockmanager.cpp  stockmanager.h  tickerwidget.cpp  tickerwidget.h  tradeservice.h
.claude/: settings.local.json
rules/: _build-test.md  _build.md  _build.md.tmp.16556.1776760575082  _database-schema.md  _dual-currency.md  _files-reference.md  _future-improvements.md  _limit-order.md  _overview.md  _refactoring-oop.md  _refactoring-phase1.md  _refactoring-phase2.md  _refactoring-phase3.md  _testing.md  _trading-flow.md  _ui-layout.md
